[tool.poetry]
name = "commune-chat"
version = "0.1.0"
description = ""
authors = ["Supremesource <zimulajan0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
urwid = "^2.3.4"
pynput = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
